# hyprland-dispatcher

./: LICENSE  README.md  pyproject.toml
src/hyprland_dispatcher/: __init__.py  hyprland_events.py  main.py
src/hyprland_dispatcher/dispatchers/: __init__.py  activewindow.py
